--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
+server.servlet.context-path=/tsutajima
+
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mariadb://localhost:3306/tsuta
-spring.datasource.username=tsutap
-spring.datasource.password=tsutap
+spring.datasource.username=tsuta
+spring.datasource.password=tsuta
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
